@@ -1,3 +1,9 @@
+Mon May 21 00:43:48 2001  George Lebl <jirka@5z.com>
+
+	* gnome-ditem-entry.[ch]: to be consistent with everything else g*
+	  return the item from the _ref function when we do that.  Also
+	  update the docs for this of course.
+
 Sun May 20 22:46:20 2001  George Lebl <jirka@5z.com>
 
 	* gnome-config.c: fix get_translated_string wrt defaults, the old
